ess-web-build/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    purpose: ess-web
    managed-by: argocd
