ess-web-build/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      securityContext:
        fsGroup: 10001
      volumes:
        - name: mssql-data
          persistentVolumeClaim:
            claimName: mssql-data
      containers:
        - name: sql
          image: mcr.microsoft.com/azure-sql-edge
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-data
              mountPath: /var/opt/mssql
          readinessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 1433
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: app
spec:
  selector:
    app: db
  ports:
    - port: 1433
      targetPort: 1433
